2001-11-22  James Simmons  <jsimmons@transvirtual.com>

        * Final port of Russell King's code. Today we are going to
	* start working on a better api for 2.5. 
