@@ -763,7 +763,7 @@ static _INLINE_ void transmit_chars(struct uart_info *info, int *intr_done)
 			*intr_done = 0;
 		return;
 	}
-	if (info->xmit.head == info->xmit.tail
+	if (port->xmit.head == port->xmit.tail
 	    || info->tty->stopped
 	    || info->tty->hw_stopped) {
 		serial8250_stop_tx(port, 0);
@@ -772,14 +772,14 @@ static _INLINE_ void transmit_chars(struct uart_info *info, int *intr_done)
 
 	count = port->fifosize;
 	do {
-		serial_out(port, UART_TX, info->xmit.buf[info->xmit.tail]);
-		info->xmit.tail = (info->xmit.tail + 1) & (UART_XMIT_SIZE - 1);
+		serial_out(port, UART_TX, port->xmit.buf[port->xmit.tail]);
+		port->xmit.tail = (port->xmit.tail + 1) & (UART_XMIT_SIZE - 1);
 		port->icount.tx++;
-		if (info->xmit.head == info->xmit.tail)
+		if (port->xmit.head == port->xmit.tail)
 			break;
 	} while (--count > 0);
 
-	if (CIRC_CNT(info->xmit.head, info->xmit.tail, UART_XMIT_SIZE) <
+	if (CIRC_CNT(port->xmit.head, port->xmit.tail, UART_XMIT_SIZE) <
 			WAKEUP_CHARS)
 		uart_event(info, EVT_WRITE_WAKEUP);
 
@@ -789,8 +789,8 @@ static _INLINE_ void transmit_chars(struct uart_info *info, int *intr_done)
 	if (intr_done)
 		*intr_done = 0;
 
-	if (info->xmit.head == info->xmit.tail)
-		serial8250_stop_tx(info->port, 0);
+	if (port->xmit.head == port->xmit.tail)
+		serial8250_stop_tx(port, 0);
 }
 
 static _INLINE_ void check_modem_status(struct uart_info *info)
